# Movero

./: .clang-format  .clangd  .gitignore  CHANGELOG  CHANGELOG.md  CHANGELOG.spec  CMakeLists.txt  CMakePresets.json  README.md  README_codeberg.md  build_all.sh  codium-extensions.txt  resources.qrc  style.qss
.github/: FUNDING.yml
assets/: Movero-paste.desktop  Movero-settings.desktop  Movero.desktop  dolphin-service-menu.desktop  dolphin_service_menu.desktop  nautilus_extension.py  postinst_rpm.sh  postun
packaging/: Containerfile.cachyos  Containerfile.ubuntu  generate_checksums.cmake  postinst_rpm.sh
packaging/arch/: CHANGELOG.spec  PKGBUILD  movero.install  my-worker.te
packaging/debian/: postinst  postrm
src/: .main.cpp.kate-swp  Config.cpp  Config.h  CopyWorker.cpp  CopyWorker.h  DetailsWindow.cpp  DetailsWindow.h  DetailsWindow.ui  FastCopier.code-workspace  LogHelper.cpp  LogHelper.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Movero.code-workspace  Settings.cpp  Settings.h  Settings.ui  StartupHandler.cpp  StartupHandler.h  main.cpp  style.qss
translations/: Movero_de.ts  Movero_ro.qm  Movero_ro.ts
